--- a/Minecraft/server.properties
+++ b/Minecraft/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Fri Aug 16 02:46:57 PDT 2019
+#Fri Aug 16 12:19:52 PDT 2019
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
@@ -34,7 +35,7 @@ generate-structures=true
 online-mode=true
 max-build-height=256
 level-seed=
-use-native-transport=true
 prevent-proxy-connections=false
-enable-rcon=false
+use-native-transport=true
 motd=A Minecraft Server
+enable-rcon=false
