8/17 update for 1.13.2 Forge server

--- a/Minecraft/server.properties
+++ b/Minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Aug 16 12:19:52 PDT 2019
+#Sat Aug 17 12:22:51 PDT 2019
 spawn-protection=16
 max-tick-time=60000
 generator-settings=
@@ -27,7 +27,7 @@ server-ip=
 spawn-npcs=true
 allow-flight=false
 level-name=world
-view-distance=10
+view-distance=9
 resource-pack=
 spawn-animals=true
 white-list=false
@@ -35,7 +35,7 @@ generate-structures=true
 online-mode=true
 max-build-height=256
 level-seed=
-prevent-proxy-connections=false
 use-native-transport=true
-motd=A Minecraft Server
+prevent-proxy-connections=false
 enable-rcon=false
+motd=wo yi kai shi shi ju jue wan zhe ge fu wu qi de 
